--- a/src/ConfigService.Repository.InMemory/ConfigService.Repository.InMemory.csproj
+++ b/src/ConfigService.Repository.InMemory/ConfigService.Repository.InMemory.csproj
@@ -5,13 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ConfigService.Model\ConfigService.Model.csproj" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Microsoft.Extensions.Logging.Abstractions">
-      <HintPath>..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.logging.abstractions\2.0.0\lib\netstandard2.0\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\ConfigService.Model\ConfigService.Model.csproj" />
   </ItemGroup>
 
 </Project>
